# machine-learning-zoomcamp-2024-midterm

./: Dockerfile  Makefile  README.md  notebook.ipynb  predict.py  pyproject.toml  train.py
data/: df_test_lite.csv
templates/: index.html
